--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -4,8 +4,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #1f2937;
-  color: white;
+  background-color: #313741;
+  color: rgb(7, 6, 6);
 }
 
 .nav-left,
